--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -289,7 +289,7 @@ body {
 }
 
 .box1 {
-    background: url('/images/manolito.jpg') no-repeat center center/contain;
+    background: url('/public//images/manolito.jpg') no-repeat center center/contain;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
@@ -313,7 +313,7 @@ body {
 }
 
 .box5 {
-    background: url('/images/guille.jpg') no-repeat center center/contain;
+    background: url('/public/images/guille.jpg') no-repeat center center/contain;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
