--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -321,7 +321,7 @@ body {
         z-index: 1000;
         background: #fca6f7;
         backdrop-filter: blur(5px);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);   /*#c71ab3;*/
         padding: 0;
         height: auto;
     }
