--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -612,5 +612,16 @@ body {
         height: 2px; 
     }
 
-    
+    .dropdown-menu {
+        margin-top: 10px !important;
+        left: -18px !important;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        min-width: 160px !important;
+        margin-left: 0 !important;
+        left: 100% !important;
+        top: -5px !important;
+    }
+        
 }
