--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -761,11 +761,18 @@ body {
     
     .dropdown-menu {
         min-width: 220px;
+        left: -10px;
+        margin-top: 7px;
     }
     
     .dropdown-menu li a {
         padding: 14px 24px;
         font-size: 14px;
+    }
+
+    .dropdown-menu {
+        margin-top: 10px !important;
+        left: -30px !important;
     }
     
     .main-content {
