upd style index

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -526,7 +526,8 @@ body {
     }
 
     .gradient-background {
-        height: 60vh; 
+        height: 220vh; 
+        position: fixed;
     }
 
     .nav-wrapper {
