--- a/public/assets/css/contacto.css
+++ b/public/assets/css/contacto.css
@@ -328,7 +328,7 @@ body {
 @media (max-width: 768px) {
      body {
         padding-top: 80px;
-        overflow-x: hidden;
+        overflow: auto;
     }
 
     .nav-wrapper {
