--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -480,9 +480,12 @@ body {
     }
 
     .box1, .box5 {
-        padding: 8px;
+        padding: 5px;
         box-sizing: border-box;
         overflow: hidden;
+        background-size: 90%; /* Reduce el tamaño para que quepa completa con margen */
+        background-position: center center; /* Centrada para que se vea completa */
+        padding: 5px;
     }
 
     .box2 {
